# transip-dynamic-dns

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.nocache  README.md  deploy.sh
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  docker-image.yml  docker-push.yml
src/: get_ip.rs  main.rs  transip.rs
