[package]
name = "transip_dynamic_dns"
version = "0.1.0"
authors = ["Alex Nederlof <alex@nederlof.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
log = "0.4.17"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
crypto-mac = "0.11.1"
chrono = "0.4.23"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
simplelog = "0.12.1"
openssl = "0.10.45"
chrono-tz = "0.8.1"
simple-error = "0.3.0"
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]


[[bin]]
path = "src/main.rs"
name = "transip_dynamic_dns"
