[package]
name = "transip_dynamic_dns"
version = "0.1.0"
authors = ["Alex Nederlof <alex@nederlof.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.20"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
crypto-mac = "0.11.1"
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
simplelog = "0.12.1"
openssl = "0.10.59"
chrono-tz = "0.8.4"
simple-error = "0.3.0"
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["user-hooks"]


[[bin]]
path = "src/main.rs"
name = "transip_dynamic_dns"
